# homework-c_2sem

./: .clang-format  .clang-tidy  .gitignore  README.md
.github/workflows/: ci.yml
aerosoft/: CMakeLists.txt
aerosoft/src/: avl.c  avl.h  main.c
csv-printer/: CMakeLists.txt
csv-printer/include/: csvPrinter.h
csv-printer/src/: csvParser.c  main.c  tablePrinter.c
csv-printer/tests/: testCsv.c
dfa/: CMakeLists.txt
dfa/include/: dfa.h
dfa/src/: dfa.c  main.c
dfa/tests/: testDfa.c
states/: CMakeLists.txt
states/include/: distributor.h  graph.h  state.h
states/src/: distributor.c  graph.c  main.c  state.c
states/tests/: testDistributor.c  testGraph.c  testState.c
